<resources>
    <string name="app_name">Digital Interaction Design</string>
    <string name="AddPlant">Aggiungi Pianta</string>
    <string name="AddPlant_En">Add Plant</string>
    <string name="my_plant_title">Nome Pianta </string>
    <string name="BtnAdd">Aggiungi</string>
    <string name="BtnAdd_En">Add</string>
    <string name="BtnNext">Continua</string>
    <string name="BtnNext_En">Next</string>
    <string name="BtnCancel">Annulla</string>
    <string name="BtnCancel_En">Cancel</string>
    <string name="BtnWater">Annaffia</string>
    <string name="BtnWater_En">Water</string>
    <string name="Btn_Signout">Disconnetti</string>
    <string name="Btn_Signout_En">Sign out</string>
    <string name="Btn_SignUp">Iscriviti</string>
    <string name="Btn_SignUp_En">Signup</string>
    <string name="SeeAll">Vedi Tutto ></string>
    <string name="SeeAll_En">See All ></string>
    <string name="Search">Cerca</string>
    <string name="Search_En">Search</string>
    <string name="EditEmail">Email</string>
    <string name="EditPassword">Password</string>
    <string name="Nome">Nome</string>
    <string name="Name">Name</string>
    <string name="Stanza">Stanza</string>
    <string name="Room">Room</string>
    <string name="Vaso">Vaso</string>
    <string name="Vase">Vase</string>
    <string name="Temperature">Temperatura</string>
    <string name="Temperature_En">Temperature</string>
    <string name="Brightness">Luminosità</string>
    <string name="Brightness_en">Brightness</string>
    <string name="Humidity">Umidità</string>
    <string name="Humidity_En">Humidity</string>
    <string name="LoremIpsum"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vel dignissim risus. Nulla suscipit ultrices ante nec maximus. In hac habitasse platea dictumst. Suspendisse potenti. Donec imperdiet mi in dolor commodo feugiat. Sed felis eros, pellentesque id finibus at, hendrerit id ante. Donec efficitur massa vitae massa molestie aliquet eget pulvinar nulla. Donec in metus eget est interdum malesuada a euismod sem. Donec sit amet dapibus nulla. Mauris maximus erat quis magna fermentum, a cursus elit elementum. Integer lacinia lectus sed convallis luctus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Pellentesque sed turpis quis erat dignissim tempor non et nisl. Sed viverra, ipsum vel rutrum vulputate, mi ligula posuere sapien, et dictum magna velit nec lorem."
</string>
    <string name="login_app_name">Plant-e</string>
    <string name="login_SloganLogin">Prendersi cura delle tue piante non è mai stato così facile</string>
    <string name="login_SloganLogin_En">Taking care of your plants has never been easier!</string>
    <string name="login_BtnLogin">Login</string>
    <string name="no_account">Non hai un account? <b>Iscriviti</b></string>
    <string name="no_account_En">Not have account? <b>SignUp</b></string>
    <string name="signup_Title">Inizia la tua avventura su Plant-e!</string>
    <string name="signup_Title_En">Begin your adventure on Piant-e!</string>
    <string name="signup_BtnSignup">SignUp</string>
    <string name="AddPlantNameRoom_SubtitleName">DA DEFINIRE</string>
    <string name="AddPlantNameRoom_SubtitleName_En">Give your plant a unique name!</string>
    <string name="AddPlantNameRoom_SubtitleRoom">In quale stanza vive la tua amata pianta?</string>
    <string name="AddPlantNameRoom_SubtitleRoom_En">In which room is your lovely plant living?</string>
    <string name="AddPlantVase_SubtilteVase">In quale vaso ha messo la tua amata pianta?</string>
    <string name="AddPlantVase_SubtilteVase_En">How is the vase your lovely plant is in?</string>
    <string name="AddPlantVase_SelectTypeVase">Seleziona il tipo di vaso</string>
    <string name="AddPlantVase_SelectTypeVase_En">Select your vase type</string>
    <string name="AddPlantVase_TypeVase">Tipo Vaso</string>
    <string name="AddPlantVase_TypeVase_En">Vase Type</string>
    <string name="AddPlantVase_SelecetSizeVase">Selezione la grandezza del tuo vaso</string>
    <string name="AddPlantVase_SelecetSizeVase_En">Select your vase size</string>
    <string name="AddPlantVase_SizeVase">Dimensione Vaso</string>
    <string name="AddPlantVase_SizeVase_En">Vase Size</string>
    <string name="AddPlantVase_SelectSoil">Seleziona il tipo di terra usata</string>
    <string name="AddPlantVase_SelectSoil_En">Select your soil type</string>
    <string name="AddPlantVase_TypeSoil">Tipo di Terra</string>
    <string name="AddPlantVase_TypeSoil_En">Soil Type</string>
    <string name="AddPlantSensor_Title">Configurazione Sensori</string>
    <string name="AddPlantSensor_Title_En">DA DEFINIRE</string>
    <string name="AddRoomTitle">Aggiungi stanza</string>
    <string name="AddRoomTitle_En">Add Room</string>
    <string name="Calendarizzazione_Title">Calendarizzazione</string>
    <string name="Calendarizzazione_Title_En">DA DEFINIRE</string>
    <string name="Calendarizzazione_SubTitle">Gestisci l\'annaffiatura delle  tue piante</string>
    <string name="Calendarizzazione_SubTitle_En">Manage you plants\' watering</string>
    <string name="Calendarizzazione_NoPiante">Non hai ancora aggiunto nessuna pianta :(</string>
    <string name="Calendarizzazione_NoPiante_En">You dont have add any plants :(</string>
    <string name="Commitment_Title">Livello di impegno</string>
    <string name="Commitment_Title_En">Commitment Level</string>
    <string name="Commitment_SubTitle">Quanto tempo vorresti investire nelle tue piante</string>
    <string name="Commitment_SubTitle_En">How much time are you willing to invest in your plants?</string>
    <string name="Commitment_Title_CL01">Non più di tanto...</string>
    <string name="Commitment_Title_CL01_En">Not that much...</string>
    <string name="Commitment_Subtitle_CL01">"Il minimo indispensabile" è il tuo motto!</string>
    <string name="Commitment_Subtitle_CL01_En">"The bare minimum" is you motto!</string>
    <string name="Commitment_Title_CL02">Abbastanza</string>
    <string name="Commitment_Title_CL02_En">Enough</string>
    <string name="Commitment_Subtitle_CL02_">Ami le tue piante...ma non VIVI per loro</string>
    <string name="Commitment_Subtitle_CL02_En">You love your plants... but you just don\'t LIVE for them.</string>
    <string name="Commitment_Title_CL03">Molto</string>
    <string name="Commitment_Title_CL03_En">Lots</string>
    <string name="Commitment_Subtitle_CL03">Se solo potessi vivere nello stesso vaso delle tue piante!</string>
    <string name="Commitment_Subtitle_CL03_En">If you only could you would move in the same vase as your plants!</string>
    <string name="DeathDialog_Title">Sei sicur* di voler registrare la morte della tua pianta?</string>
    <string name="DeathDialog_Title_En">Are you sure you want to register YOUR PLANT\'s death?</string>
    <string name="BtnRip">R.I.P.</string>
    <string name="BtnRip_En">R.I.P.</string>
    <string name="Discover_Title">Scopri</string>
    <string name="Discover_Title_En">Discover</string>
    <string name="Discover_SubTitle">Scopri e aggiungi delle nuove e fantastiche piante!</string>
    <string name="Discover_SubTitle_En">Discover and add new amazing plants!</string>
    <string name="Discover_Popular">Più popolari</string>
    <string name="Discover_Popular_En">Most Popular</string>
    <string name="Discover_Like">Più piaciuti</string>
    <string name="Discover_Like_En">Most Liked</string>
    <string name="Discover_Dashboard_title">Nome Pianta</string>
    <string name="Discover_Dashboard_Subtitle">CATEGORIA</string>
    <string name="Discover_Dashboard_Subtitle_En">CATEGORY</string>
    <string name="Discover_Level">Livello</string>
    <string name="Discover_Level_En">Level</string>
    <string name="Discover_Commitment">Impegno</string>
    <string name="Discover_Commitment_En">Commitment</string>
    <string name="Discover_AddedBy">Aggiunto da</string>
    <string name="Discover_AddedBy_En">Added By</string>
    <string name="Discover_Information">Informazioni</string>
    <string name="Discover_Information_En">Information</string>
    <string name="Discover_Advice">Consigli</string>
    <string name="Discover_Advice_En">Advice</string>
    <string name="Discovery_Category_Title">Categoria</string>
    <string name="Discovery_Category_Title_En">Category</string>
    <string name="SkilLevel_Title">Livello di abilità</string>
    <string name="SkilLevel_Title_En">Skill Level</string>
    <string name="SkilLevel_Subtitle">Seleziona il livello di abilità che meglio ti rappresenta!</string>
    <string name="SkilLevel_Subtitle_En">Tap the "skill level" that best represents YOU!</string>
    <string name="SkilLevel_SL01_Title">Killer di piante</string>
    <string name="SkilLevel_SL01_Title_En">Plant Killer</string>
    <string name="SkilLevel_SL01_Subtitle">Sembra che qualsiasi cosa tu tocchi...muoia e basta</string>
    <string name="SkilLevel_Sl01_Subtitle_En"> It seems like everything you touch just... you know.</string>
    <string name="SkilLevel_SL02_Title">Pollice Verde</string>
    <string name="SkilLevel_SL02_Title_En">Grey Thumb</string>
    <string name="SkilLevel_SL02_Subtitle">Riesci a tenere in vita qualche piante... Ogni tanto</string>
    <string name="SkilLevel_Sl02_Subtitle_En">You managed to keep some of the plants alive... Sometimes.</string>
    <string name="SkilLevel_SL03_Title">Giardiniere in erba</string>
    <string name="SkilLevel_SL03_Title_En">Budding Gardner</string>
    <string name="SkilLevel_SL03_Subtitle">Tu e le tue piante siete abituati l\'una all\'altra</string>
    <string name="SkilLevel_Sl03_Subtitle_En">You and your plants are accustomed to one another.</string>
    <string name="SkilLevel_SL04_Title">Botanico Esperto</string>
    <string name="SkilLevel_SL04_Title_En">Expert Botanic</string>
    <string name="SkilLevel_SL04_Subtitle">Le tue piante ti sorridono e ti salutano tutte le volte che ti vedono</string>
    <string name="SkilLevel_Sl04_Subtitle_En">Your plants smile and wave every time they see you!</string>
    <string name="SkilLevel_SL05_Title">Sovrano di tutte le piante</string>
    <string name="SkilLevel_SL05_Title_En">Ruler of all Plants</string>
    <string name="SkilLevel_SL05_Subtitle">Tutto ciò di cui hai bisogno è una breve occhiata: non c\'è pianta al mondo di cui non puoi prenderti cura.</string>
    <string name="SkilLevel_Sl05_Subtitle_En">All you need is a brief look: there is no plant in the world you can\'t take care of.</string>
    <string name="Graveyard_Title">Cimitero delle Piante</string>
    <string name="Gravetard_Title_En">Plant Graveyard</string>
    <string name="loading_add_plant">Stai contribuendo ad aumentare il valore globale dell\'ossigeno! </string>
    <string name="loading_add_plant_En"> You are contributing to increasing the global oxygen value! </string>
    <string name="MyPlantSettings_Title">Impostazioni Pianta</string>
    <string name="MyPlantSettings_Name_Subtitle">Imposta il nome della tua pianta</string>
    <string name="MyPlantSettings_Room_Subtitle">Imposta il luogo della tua pianta</string>
    <string name="MyPlantSettings_Vase_Subtitle_Type">Seleziona il tipo di vas</string>
    <string name="MyPlantSettings_Vase_Subtitle_Size">Seleziona la dimensione del vaso</string>
    <string name="MyPlantSettings_Vase_Subtitle_Soil">Seleziona il tipo di terra</string>
    <string name="MyPlantSetting_MissingInformation">Informazione mancante! > </string>
    <string name="MyPlantSetting_BtnDeathPlant">Registra la morte della tua pianta</string>
    <string name="SelectCalendarRange_Title">Calendarizzazione</string>
    <string name="SelectCalendarRange_SubTitle">Seleziona un range per il calendario</string>
    <string name="SelectCalendarRange_Forever">Per Sempre</string>
    <string name="SelectCalendarRange_SpecificData">Range di Date Specifico</string>
</resources>