<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout7"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MyPlantSettingsFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/plantSettingsTitle"
        style="@style/titleAppearance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/MyPlantSettings_Title"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline15" />

    <ImageButton
        android:id="@+id/backButtonPlantSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:backgroundTint="@android:color/transparent"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintBottom_toTopOf="@+id/guideline15"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/grey"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.18" />

    <androidx.cardview.widget.CardView
        android:id="@+id/nameCardSettings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        app:cardBackgroundColor="@color/light_grey"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toTopOf="@+id/roomCardSettings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline16"
        app:layout_constraintVertical_weight="1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:id="@+id/nameCTASettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/MyPlantSettings_Name_Subtitle"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/plantNameSettings"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/nameTitleSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:text="@string/Nome"
                android:textColor="@color/dark_grey"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/nameCTASettings"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/plantNameSettings"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="bottom|end"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:minWidth="48dp"
                android:text="My Plant >"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/roomCardSettings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        app:cardBackgroundColor="@color/light_grey"

        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toTopOf="@+id/vaseCardSettings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameCardSettings"
        app:layout_constraintVertical_weight="1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:id="@+id/roomCTASettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/MyPlantSettings_Room_Subtitle"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/roomNameSettings"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/roomTitleSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:text="@string/Stanza"
                android:textColor="@color/dark_grey"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/roomCTASettings"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/roomNameSettings"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="bottom|end"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:minWidth="48dp"
                android:text="Room >"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/vaseCardSettings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        app:cardBackgroundColor="@color/light_grey"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@id/guideline17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roomCardSettings"
        app:layout_constraintVertical_weight="2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:id="@+id/vaseTypeCTASettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/MyPlantSettings_Vase_Subtitle_Type"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/vaseTypeSettings"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/vaseSizeCTASettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/MyPlantSettings_Vase_Subtitle_Size"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/vaseSizeSettings"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/soilTypeCTASettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/MyPlantSettings_Vase_Subtitle_Soil"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/soilTypeSettings"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/vaseTitleSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:text="@string/Vaso"
                android:textColor="@color/dark_grey"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/vaseTypeCTASettings"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/vaseTypeSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:text="@string/MyPlantSetting_MissingInformation"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/vaseSizeSettings"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/vaseSizeSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:text="@string/MyPlantSetting_MissingInformation"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/soilTypeSettings"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/soilTypeSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:text="@string/MyPlantSetting_MissingInformation"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.83" />

    <Button
        android:id="@+id/btnSensori"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/MyPlantSetting_BtnSensors"
        android:textSize="12sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/btnDeathPlant"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btnDeathPlant"
        app:layout_constraintTop_toTopOf="@+id/guideline17" />

    <Button
        android:id="@+id/btnDeathPlant"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@drawable/button_background_red"
        android:text="@string/MyPlantSetting_BtnDeathPlant"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/vaseCardSettings"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/vaseCardSettings"
        app:layout_constraintTop_toBottomOf="@+id/btnSensori" />

</androidx.constraintlayout.widget.ConstraintLayout>