<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SelectCalendarRangeFragment">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.18" />

    <ImageButton
        android:id="@+id/backButtonSelectCalendarRange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:backgroundTint="@android:color/transparent"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintBottom_toTopOf="@+id/guideline40"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/grey"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/plantSettingsTitle6"
        style="@style/titleAppearance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/SelectCalendarRange_Title"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline40" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:visibility="visible"
        app:cardBackgroundColor="@color/light_grey"
        app:cardCornerRadius="16dp"
        app:contentPadding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline41">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SelectCalendarRange_SubTitle"
                android:textColor="@color/dark_grey"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/calendarRangeRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4">

                <RadioButton
                    android:id="@+id/btnForever"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/SelectCalendarRange_Forever"
                    android:textColor="@color/dark_grey"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/btnSpecificDateRange"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/SelectCalendarRange_SpecificData"
                    android:textColor="@color/dark_grey"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/btnNever"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/SelectCalendarRange_Never"
                    android:textColor="@color/dark_grey"
                    android:textSize="12sp" />
            </RadioGroup>

            <TextView
                android:id="@+id/selectedRangeTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="-"
                android:textAlignment="textEnd"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/calendarRangeRadioGroup"
                app:layout_constraintVertical_bias="0.5" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>